--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
+		"@sveltejs/kit": "^1.20.4",
 		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^4.0.0",
 		"vite": "^4.3.0"
 	},
 	"type": "module",
 	"dependencies": {
+		"marked": "^7.0.4",
 		"sass": "^1.63.4"
 	}
 }
